added intro and start us traduction

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,5 +1,4 @@
 {
-    "date": "Date",
-    "save": "Save",
-    "cancel": "Cancel"
+    "intro": "I'm Santiago, appassionate for tech and human thought , I believe that rational and emotional balance is fundamental part for understand society and build country. I believe that tech is escencial to reduce big mundial social gap and allows a major economics growth.",
+    "startus": "I believe that the human is integral when know to share their knowledge and experiences to build big ideas. I think so success is build by us and always is important begin or ¿Who will do it?, I believe that be propositive, restless and disciplined is the key to let ignorance and gain knowledge"
 }
