added startups traduction

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,5 +1,6 @@
 {
     "intro": "I'm Santiago, appassionate for tech and human thought , I believe that rational and emotional balance is fundamental part for understand society and build country. I believe that tech is escencial to reduce big mundial social gap and allows a major economics growth.",
     "startus": "I believe that the human is integral when know to share their knowledge and experiences to build big ideas. I think so success is build by us and always is important begin or ¿Who will do it?, I believe that be propositive, restless and disciplined is the key to let ignorance and gain knowledge",
-    "software": "The software solutions changed world and connects markets of unimaginable ways, the value of software development is dream with big ideas while your materialize them to code lines."
+    "software": "The software solutions changed world and connects markets of unimaginable ways, the value of software development is dream with big ideas while your materialize them to code lines.",
+    "startups": "I have participated to startups building since zero developmenting bussiness strategies and building good teams. I work to be expendable, I shared tools and my team will go further than I imagine"
 }
