--- a/lang/es.json
+++ b/lang/es.json
@@ -1,5 +1,6 @@
 {
     "intro": "Soy Santiago, apasionado por la tecnología y el pensamiento humano, creo que el equilibrio emocional y racional es parte fundamental para entender la sociedad y construir futuro, creo que la tecnología es esencial reduciendo la brecha social mundial y brinda las herramientas necesarias para un sólido crecimiento económico.",
     "startus": "Creo que el ser humano es íntegro cuándo sabe compartir su conocimiento y experiencias para construir grandes ideas. Pienso que el éxito se construye en conjunto y siempre es importante empezar nosotros ¿o quien más lo hará?, creo que ser propositivo, inquieto y disciplinado es clave para alejarnos de la ignorancia y acercarnos al conocimiento.",
-    "software": "Las soluciones de software cambian el mundo y conectan mercados de formas imposibles de imaginar, el valor de desarrollar software es soñar en grandes ideas mientras las materializas en líneas de código."
+    "software": "Las soluciones de software cambian el mundo y conectan mercados de formas imposibles de imaginar, el valor de desarrollar software es soñar en grandes ideas mientras las materializas en líneas de código.",
+    "startups": "He participado en construcción de startups desde cero desarrollando estrategias de negocio y construyendo equipos sólidos. Trabajo para ser prescindible, brindo las herramientas y mi equipo ira mas lejos de lo que imagino"
 }
