added muvo startup translation

--- a/lang/en.json
+++ b/lang/en.json
@@ -8,5 +8,7 @@
     "motivation": "My motivation is share experiences, materialize proyects and generate value to all around people to me.",
     "title": "Startups",
     "title_findpet": "Findpet - Pets GPS tracker",
-    "findpet": "is an tracker app to pets in real time, the great pets growth in the homes around of the world increases GPS demand, also millennials prefer pets instead be fathers. The lost pets is a mundial problem and FindPet GPS cover this necessity."
+    "findpet": "is an tracker app to pets in real time, the great pets growth in the homes around of the world increases GPS demand, also millennials prefer pets instead be fathers. The lost pets is a mundial problem and FindPet GPS cover this necessity.",
+    "title_muvo": "MUVO - e-bike sharing",
+    "muvo": "is an rent bikes app, a perfect option to movilize persons avoiding cars traffic, also reducing CO2 emission and without sweat, or ¿who want arrive swaeting to work?. The startup begin operations into mundial micromovility boom."
 }
