fixed: mimegafono title translation

--- a/lang/en.json
+++ b/lang/en.json
@@ -11,6 +11,6 @@
     "findpet": "is an tracker app to pets in real time, the great pets growth in the homes around of the world increases GPS demand, also millennials prefer pets instead be fathers. The lost pets is a mundial problem and FindPet GPS cover this necessity.",
     "title_muvo": "MUVO - e-bike sharing",
     "muvo": "is an rent bikes app, a perfect option to movilize persons avoiding cars traffic, also reducing CO2 emission and without sweat, or ¿who want arrive swaeting to work?. The startup begin operations into mundial micromovility boom.",
-    "title-mimegafono": "Mi megáfono - Mass media advertisement",
+    "title_mimegafono": "Mi megáfono - Mass media advertisement",
     "mimegafono": "is a media tech to democratize mass media advertisement, with three simple steps to create ad campaing and get to thousands persons, withuot delay and low cost."
 }
