--- a/lang/es.json
+++ b/lang/es.json
@@ -11,6 +11,6 @@
     "findpet": "es un app para monitorear a tu mascota en tiempo real, nace por la alta presencia de mascotas en los hogares alrededor del mundo, esto asociado a que los millennials no quieren ser padres y optan por mascotas. Los casos de pérdida de mascotas es proporcional al crecimiento de este mercado y FindPet GPS cubre esta necesidad.",
     "title_muvo": "MUVO - Bicicletas eléctricas compartidas",
     "muvo": "es un app para el alquiler de bicicletas eléctricas, la opción perfecta para movilizar a las personas evitando el tráfico, reduciendo emisiones de CO2 y sin sudar, o ¿quién quiere llegar sudando al trabajo?. La startup empieza en el auge mundial de la micromovilidad y con precios muy competitivos.",
-    "title-mimegafono": "Mi Megáfono - Publicidad en medios masivos",
+    "title_mimegafono": "Mi Megáfono - Publicidad en medios masivos",
     "mimegafono": "es una media tech que democratiza la pauta en medios tradicionales, tres sencillos pasos para crear una campaña publicitaria y llegar a miles de personas, sin intermediarios, sin demoras y a bajo costo."
 }
