added 21ss gaming startup translation

--- a/lang/es.json
+++ b/lang/es.json
@@ -12,5 +12,7 @@
     "title_muvo": "MUVO - Bicicletas eléctricas compartidas",
     "muvo": "es un app para el alquiler de bicicletas eléctricas, la opción perfecta para movilizar a las personas evitando el tráfico, reduciendo emisiones de CO2 y sin sudar, o ¿quién quiere llegar sudando al trabajo?. La startup empieza en el auge mundial de la micromovilidad y con precios muy competitivos.",
     "title_mimegafono": "Mi Megáfono - Publicidad en medios masivos",
-    "mimegafono": "es una media tech que democratiza la pauta en medios tradicionales, tres sencillos pasos para crear una campaña publicitaria y llegar a miles de personas, sin intermediarios, sin demoras y a bajo costo."
+    "mimegafono": "es una media tech que democratiza la pauta en medios tradicionales, tres sencillos pasos para crear una campaña publicitaria y llegar a miles de personas, sin intermediarios, sin demoras y a bajo costo.",
+    "title_21ss": "21SSGaming - Torneos y equipo gaming",
+    "ssgaming": "es una startup que impulsa los deportes e-Sports y apoya el talento Gaming Latinoamericano, se encarga de la creación de torneos y búsqueda de buenos jugadores para participación y representación en torneos nacionales e internacionales."
 }
