added carrousel options translation

--- a/lang/en.json
+++ b/lang/en.json
@@ -14,5 +14,8 @@
     "title_mimegafono": "Mi megáfono - Mass media advertisement",
     "mimegafono": "is a media tech to democratize mass media advertisement, with three simple steps to create ad campaing and get to thousands persons, withuot delay and low cost.",
     "title_21ss": "21SSGaming - Tournaments and gaming team",
-    "ssgaming": "is a e-sports startup supporting the latin america talent, it create tournaments and hunt good players to national and international tournaments participation and representation."
+    "ssgaming": "is a e-sports startup supporting the latin america talent, it create tournaments and hunt good players to national and international tournaments participation and representation.",
+    "books": "Books",
+    "places": "Places",
+    "created": "Created by"
 }
