--- a/lang/es.json
+++ b/lang/es.json
@@ -14,5 +14,8 @@
     "title_mimegafono": "Mi Megáfono - Publicidad en medios masivos",
     "mimegafono": "es una media tech que democratiza la pauta en medios tradicionales, tres sencillos pasos para crear una campaña publicitaria y llegar a miles de personas, sin intermediarios, sin demoras y a bajo costo.",
     "title_21ss": "21SSGaming - Torneos y equipo gaming",
-    "ssgaming": "es una startup que impulsa los deportes e-Sports y apoya el talento Gaming Latinoamericano, se encarga de la creación de torneos y búsqueda de buenos jugadores para participación y representación en torneos nacionales e internacionales."
+    "ssgaming": "es una startup que impulsa los deportes e-Sports y apoya el talento Gaming Latinoamericano, se encarga de la creación de torneos y búsqueda de buenos jugadores para participación y representación en torneos nacionales e internacionales.",
+    "books": "Libros",
+    "places": "Lugares",
+    "created": "Creado por"
 }
