fixed: translation tweaks

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,20 +1,20 @@
 {
     "english": "English",
     "spanish": "Spanish",
-    "intro": "I'm Santiago, tech and human thought appassionate, I believe that rational and emotional balance is fundamental part for understand society and build country. I believe that tech is escencial to reduce big mundial social gap and allows a major economics growth.",
-    "start_us": "I believe that the human is integral when know to share their knowledge and experiences to build big ideas. I think so success is build by us and always is important begin now or ¿who will do it?, I believe that be propositive, restless and disciplined is the key to let ignorance and gain knowledge.",
-    "software": "The software solutions changed world and connects markets of unimaginable ways, the value of software development is dream with big ideas while your materialize them to code lines.",
-    "startups": "I have participated to startups building since zero developmenting bussiness strategies and building good teams. I work to be expendable, I shared tools and my team will go further than I imagine.",
-    "motivation": "My motivation is share experiences, materialize proyects and generate value to all around people to me.",
+    "intro": "I'm Santiago, tech and human thought appassionate, I believe that rational and emotional balance is fundamental to understand society and build country. I believe that tech is escencial to reduce big mundial social gap and allows better economics growth.",
+    "start_us": "I believe that humans is integral when knows to share their knowledge and experiences to build big ideas. I think so success is built by us and always is important begin now or ¿who will do it?, I believe that be propositive, restless and disciplined is the key to let ignorance and gain knowledge.",
+    "software": "The software solutions change the world and connects markets of unimaginable ways, software development value is dream with big ideas while your materialize them to code lines.",
+    "startups": "I have participated to startups building since zero developing bussiness strategies and building good teams. I work to be expendable, I share tools and my team will go further than I imagine.",
+    "motivation": "Share experiences is my motivation, materialize projects and generate value to all around people to me.",
     "title": "Startups",
     "title_findpet": "Findpet - Pets GPS tracker",
-    "findpet": "is an tracker app to pets in real time, the great pets growth in the homes around of the world increases GPS demand, also millennials prefer pets instead be fathers. The lost pets is a mundial problem and FindPet GPS cover this necessity.",
+    "findpet": "is a tracker app to pets in real time, the great pets growth in the homes around of the world increases GPS demand, also millennials prefer pets instead be fathers. The lost pets is a mundial problem and FindPet GPS cover this necessity.",
     "title_muvo": "MUVO - e-bike sharing",
-    "muvo": "is an rent bikes app, perfect option to movilize persons avoiding cars traffic, also reducing CO2 emission and without sweat, or ¿who want arrive swaeting to work?. The startup begin operations into mundial micromovility boom.",
+    "muvo": "is a rent bikes app, perfect option to movilize persons avoiding cars traffic, also reducing CO2 emission and without sweat, or ¿who want arrive swaeting to work?. The startup begin operations into mundial micromobility boom.",
     "title_mimegafono": "Mi megáfono - Mass media advertisement",
     "mimegafono": "is a media tech to democratize mass media advertisement, with three simple steps to create ad campaing and get to thousands persons, withuot delay and low cost.",
     "title_21ss": "21SSGaming - Tournaments and gaming team",
-    "ssgaming": "is a e-sports startup supporting the latin america talent, it create tournaments and hunt good players to national and international tournaments participation and representation.",
+    "ssgaming": "is an e-sports startup supporting the latin america talent, it create tournaments and hunt good players to national and international tournaments participation and representation.",
     "books": "Books",
     "places": "Places",
     "created": "Created by"
