--- a/lang/en.json
+++ b/lang/en.json
@@ -4,8 +4,8 @@
     "intro": "I'm Santiago, tech and human thought appassionate, I believe that rational and emotional balance is fundamental to understand society and build country. I believe that tech is escencial to reduce big mundial social gap and allows better economics growth.",
     "start_us": "I believe that humans is integral when knows to share their knowledge and experiences to build big ideas. I think so success is built by us and always is important begin now or ¿who will do it?, I believe that be propositive, restless and disciplined is the key to let ignorance and gain knowledge.",
     "software": "The software solutions change the world and connects markets of unimaginable ways, software development value is dream with big ideas while your materialize them to code lines.",
-    "startups": "I have participated to startups building since zero developing bussiness strategies and building good teams. I work to be expendable, I share tools and my team will go further than I imagine.",
-    "motivation": "Share experiences is my motivation, materialize projects and generate value to all around people to me.",
+    "startups": "I have participated to startups building from zero developing bussiness strategies and building good teams. I work to be expendable, I share tools and my team will go further than I imagine.",
+    "motivation": "Sharing experiences is my motivation, materializing projects and generating value to all around people to me.",
     "title": "Startups",
     "title_findpet": "Findpet - Pets GPS tracker",
     "findpet": "is a tracker app to pets in real time, the great pets growth in the homes around of the world increases GPS demand, also millennials prefer pets instead be fathers. The lost pets is a mundial problem and FindPet GPS cover this necessity.",
