--- a/lang/en.json
+++ b/lang/en.json
@@ -1,7 +1,7 @@
 {
     "english": "English",
     "spanish": "Spanish",
-    "intro": "I'm Santiago, tech and human thought appassionate, I believe that rational and emotional balance is fundamental to understand society and build country. I believe that tech is escencial to reduce big mundial social gap and allows better economics growth.",
+    "intro": "I'm Santiago, tech and human thought passionate, I believe that rational and emotional balance is fundamental to understand society and build country. I believe that tech is escencial to reduce big mundial social gap and allows better economics growth.",
     "start_us": "I believe that humans is integral when knows to share their knowledge and experiences to build big ideas. I think so success is built by us and always is important begin now or ¿who will do it?, I believe that be propositive, restless and disciplined is the key to let ignorance and gain knowledge.",
     "software": "The software solutions change the world and connects markets of unimaginable ways, software development value is dream with big ideas while your materialize them to code lines.",
     "startups": "I have participated to startups building from zero developing bussiness strategies and building good teams. I work to be expendable, I share tools and my team will go further than I imagine.",
