added ozon info updated summary data

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,12 +1,14 @@
 {
     "english": "English",
     "spanish": "Spanish",
-    "intro": "I'm Santiago, tech and human thought passionate, I believe that rational and emotional balance is fundamental to understand society and build country. I believe that tech is escencial to reduce big mundial social gap and allows better economics growth.",
-    "start_us": "I believe that humans is integral when knows to share their knowledge and experiences to build big ideas. I think so success is built by us and always is important begin now or ¿who will do it?, I believe that be propositive, restless and disciplined is the key to let ignorance and gain knowledge.",
-    "software": "The software solutions change the world and connects markets of unimaginable ways, software development value is dream with big ideas while your materialize them to code lines.",
-    "startups": "I have participated to startups building from zero developing bussiness strategies and building good teams. I work to be expendable, I share tools and my team will go further than I imagine.",
-    "motivation": "Sharing experiences is my motivation, materializing projects and generating value to all around people to me.",
+    "intro": "I'm Santiago, tech and human thought passionate.",
+    "start_us": "I think that success is built as a team but the first step is always doing it myself.",
+    "software": "I believe AI makes us humans with superpowers and it is our duty to create super solutions.",
+    "startups": "I'm fan of startups, explosive growth and curious people.",
+    "motivation": "Learning from the best and then sharing it with others is my way of contributing to the growth of everyone.",
     "title": "Startups",
+    "title_ozon": "Ozon.mobi - Bikes financing",
+    "ozon": "is a fintech that finances bikes for unbanked people, does not check credit history and allows you to acquire their first loan in less than two days.",
     "title_findpet": "Findpet - Pets GPS tracker",
     "findpet": "is a tracker app to pets in real time, the great pets growth in the homes around of the world increases GPS demand, also millennials prefer pets instead be fathers. The lost pets is a mundial problem and FindPet GPS cover this necessity.",
     "title_muvo": "MUVO - e-bike sharing",
