--- a/lang/es.json
+++ b/lang/es.json
@@ -1,12 +1,14 @@
 {
     "english": "Inglés",
     "spanish": "Español",
-    "intro": "Soy Santiago, apasionado por la tecnología y el pensamiento humano, creo que el equilibrio emocional y racional es parte fundamental para entender la sociedad y construir futuro, creo que la tecnología es esencial reduciendo la brecha social mundial y brinda las herramientas necesarias para un sólido crecimiento económico.",
-    "start_us": "Creo que el ser humano es íntegro cuándo sabe compartir su conocimiento y experiencias para construir grandes ideas. Pienso que el éxito se construye en conjunto y siempre es importante empezar nosotros ¿o quien más lo hará?, creo que ser propositivo, inquieto y disciplinado es clave para alejarnos de la ignorancia y acercarnos al conocimiento.",
-    "software": "Las soluciones de software cambian el mundo y conectan mercados de formas imposibles de imaginar, el valor de desarrollar software es soñar en grandes ideas mientras las materializas en líneas de código.",
-    "startups": "He participado en construcción de startups desde cero desarrollando estrategias de negocio y construyendo equipos sólidos. Trabajo para ser prescindible, brindo las herramientas y mi equipo irá más lejos de lo que imagino.",
-    "motivation": "Mi motivación es compartir experiencias, materializar proyectos y generar valor en todas las personas a mi alrededor.",
+    "intro": "Soy Santiago, apasionado por la tecnología y el pensamiento humano.",
+    "start_us": "Pienso que el éxito se construye en conjunto pero el primer paso siempre lo damos nosotros.",
+    "software": "Creo que AI nos vuelve humanos con superpoderes y es nuestro deber construir super soluciones.",
+    "startups": "Soy aficionado de las startups, el crecimiento explosivo y la gente curiosa.",
+    "motivation": "Aprender de los mejores y luego compartirlo con otros es mi manera de contribuir al crecimiento de todos.",
     "title": "Proyectos",
+    "title_ozon": "Ozon.mobi - Financiación de motos",
+    "ozon": "es una fintech que financia motos a personas no bancarizadas o sin historial crediticio, no checa buro y permite a cualquier persona adquirir su primer crédito en menos de dos días",
     "title_findpet": "Findpet - GPS para perros y gatos",
     "findpet": "es un app para monitorear a tu mascota en tiempo real, nace por la alta presencia de mascotas en los hogares alrededor del mundo, esto asociado a que los millennials no quieren ser padres y optan por mascotas. Los casos de pérdida de mascotas es proporcional al crecimiento de este mercado y FindPet GPS cubre esta necesidad.",
     "title_muvo": "MUVO - Bicicletas eléctricas compartidas",
