--- a/lang/en.json
+++ b/lang/en.json
@@ -1,11 +1,11 @@
 {
     "english": "English",
     "spanish": "Spanish",
-    "intro": "I'm Santiago, tech and human thought passionate.",
-    "start_us": "I think that success is built as a team but the first step is always doing it myself.",
-    "software": "I believe AI makes us humans with superpowers and it is our duty to create super solutions.",
-    "startups": "I'm fan of startups, explosive growth and curious people.",
-    "motivation": "Learning from the best and then sharing it with others is my way of contributing to the growth of everyone.",
+    "intro": "I'm Santiago, passionate about technology and human thought.",
+    "start_us": "I believe that success is a team effort, but it always starts with individual initiative.",
+    "software": "I think AI gives us superhuman capabilities, and it's our responsibility to create extraordinary solutions.",
+    "startups": "I'm a fan of startups, explosive growth, and curious minds.",
+    "motivation": "My way of contributing to collective growth is by learning from the best and sharing that knowledge with others.",
     "title": "Startups",
     "title_ozon": "Ozon.mobi - Bikes financing",
     "ozon": "is a fintech that finances bikes for unbanked people, does not check credit history and allows you to acquire their first loan in less than two days.",
